WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247435
Property access of sparse array in LHS throws unexpected `SyntaxError`
https://bugs.webkit.org/show_bug.cgi?id=247435
Summary
Property access of sparse array in LHS throws unexpected `SyntaxError`
Kanguk Lee
Reported
2022-11-03 09:16:47 PDT
// input.js [ + 0 , ] [ 0 ] = 0 ; // Note: this is fine // [ 0 , ] [ 0 ] = 0 ; _____________________ Hello, Executing the input.js using JSC throws SyntaxError, but it is expected to be terminated normally. Running the input.js with JSC gives --- $ jsc input.js Exception: SyntaxError: Left hand side of operator '=' must be a reference. at input.js:1 --- while other engines behave like --- # V8 $ node input.js // no error # GraalJS $ js input.js // no error --- WebKit version: 615.1.10
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-07 16:41:11 PST
<
rdar://problem/102065657
>
Yusuke Suzuki
Comment 2
2022-11-07 23:06:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6241
EWS
Comment 3
2022-11-08 17:48:13 PST
Committed
256471@main
(3b17285b1ce6): <
https://commits.webkit.org/256471@main
> Reviewed commits have been landed. Closing PR #6241 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug