Cherry-pick 3b17285b1ce6. rdar://problem/103539610

Property access of sparse array in LHS throws unexpected `SyntaxError`
    https://bugs.webkit.org/show_bug.cgi?id=247435
    rdar://102065657

    Reviewed by Mark Lam.

    We should properly clear nonLHSCount after ArrayLiteral parsing.
    We use SetForScope to do that via RAII.

    * JSTests/stress/assignment-array.js: Added.
    * Source/JavaScriptCore/parser/Parser.cpp:
    (JSC::Parser<LexerType>::parseDestructuringPattern):
    (JSC::Parser<LexerType>::parseObjectLiteral):
    (JSC::Parser<LexerType>::parseArrayLiteral):
    (JSC::Parser<LexerType>::parsePrimaryExpression):
    (JSC::Parser<LexerType>::parseMemberExpression):

    Canonical link: https://commits.webkit.org/256471@main

Canonical link: https://commits.webkit.org/252432.992@safari-7614-branch